--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
+    "pinia": "^3.0.1",
     "tailwindcss": "^4.0.8",
     "vue": "^3.5.13",
     "vue-router": "^4.0.13"
